# pdf-rag

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pom.xml
core/: pom.xml
core/src/main/resources/: application.properties
core/src/test/java/org/example/: ChunkerTest.java  ColPaliClientTest.java  ColPaliPipelineTest.java  ConfidenceCalculatorTest.java  EmbedderTest.java  FileFetcherTest.java  FilesystemPageImageStoreTest.java  FusionEngineTest.java  IngestQueueTest.java  IngestServiceTest.java  IngestWorkerTest.java  OpenWebUiBackendTest.java  OpenWebUiClientTest.java  PageRasterizerTest.java  QdrantBackendTest.java  QdrantClientTest.java  RrfFusionTest.java  TextExtractorTest.java  TextLayerProbeTest.java  WeightedScoreFusionTest.java
core/src/test/java/org/hayden/: ChunkerTest.java  ColPaliClientTest.java  ColPaliPipelineTest.java  ConfidenceCalculatorTest.java  EmbedderTest.java  FileFetcherTest.java  FilesystemPageImageStoreTest.java  FusionEngineTest.java  IngestQueueTest.java  IngestServiceTest.java  IngestWorkerTest.java  OpenWebUiBackendTest.java  OpenWebUiClientTest.java  (+7 more)
docs/: README.md  architecture.md  deployment.md  mcp-integration.md  smoke-tests.md
docs/components/: README.md  chunker.md  colpali-client.md  colpali-pipeline.md  colpali-sidecar.md  dispatcher.md  embedder.md  file-fetcher.md  fusion-engine.md  ingest-queue.md  mcp-tools.md  openwebui-backend.md  page-image-store.md  page-rasterizer.md  qdrant-backend.md  qdrant-client.md  text-extractor.md  text-layer-probe.md  transports.md
docs/plans/: colpali-fusion-v1.md
server-http/: Dockerfile  pom.xml
server-http/src/main/resources/: application.properties
server-stdio/: pom.xml
server-stdio/src/main/resources/: application.properties
sidecar/: .gitignore  Dockerfile.cpu  Dockerfile.cuda  README.md  pyproject.toml
sidecar/src/colpali_server/: __init__.py  config.py  inference.py  loader.py  main.py  model.py  pooling.py  schemas.py
sidecar/tests/: conftest.py  fakes.py  test_api.py  test_inference.py  test_pooling.py
(+102 files in other folders)
